Moving the libuuid-devel to packaging/Dockerfile.mockbuild
Signed-off-by: David Maldonado Moreno <david.maldonado.moreno@intel.com>

--- a/packaging/Dockerfile.mockbuild
+++ b/packaging/Dockerfile.mockbuild
@@ -14,7 +14,7 @@ ARG UID=1000
 # Install basic tools
 RUN dnf -y install mock make \
                    rpm-build curl createrepo rpmlint redhat-lsb-core git \
-                   python-srpm-macros rpmdevtools
+                   python-srpm-macros rpmdevtools libuuid-devel
 
 # Add build user (to keep rpmbuild happy)
 ENV USER build
