--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,7 @@ Build-Depends: debhelper-compat (= 12),
                uuid-dev,
                libboost-dev,
                cmake,
-               libhdf5-mpich-dev,
-               curl
+               libhdf5-mpich-dev
 Standards-Version: 4.4.1.0
 Vcs-Browser: https://github.com/LLNL/dtcmp
 Vcs-Git: https://github.com/LLNL/dtcmp.git
