--- a/debian/rules
+++ b/debian/rules
@@ -17,17 +17,10 @@ override_dh_auto_configure:
         -DMPI_C_COMPILER=/usr/bin/mpicc.mpich                                 \
         -DHDF5_C_COMPILER_EXECUTABLE=/usr/bin/h5pcc.mpich                     \
 		-DHDF5_C_LIBRARY_hdf5=/usr/lib/x86_64-linux-gnu/hdf5/mpich/libhdf5.so \
-        -DCMAKE_SKIP_RPATH:BOOL=ON
+        -DCMAKE_SKIP_RPATH:BOOL=ON                                            \
+		-DHDF5_VOL_DAOS_INSTALL_LIB_DIR=$(prefix)/lib/x86_64-linux-gnu/
 
 # don't run the tests due to:
 # 1/20 Test  #1: h5vl_test_attribute ......................***Failed    0.01 sec
 #.../hdf5-vol-daos/_topdir/BUILD/hdf5-vol-daos-1.1.0/obj-x86_64-linux-gnu/bin/h5vl_test_driver: error while loading shared libraries: libh5vl_test_sys.so: cannot open shared object file: No such file or directory
 override_dh_auto_test:
-
-override_dh_auto_install:
-	dh_auto_install
-	# hack: how do we get these all installed in the right place?
-	mkdir -p ${buildroot}$(prefix)/lib/x86_64-linux-gnu/
-	cd ${buildroot}$(prefix)/lib/ && mv pkgconfig lib*.so* x86_64-linux-gnu/
-#	chrpath -d debian/tmp/usr/lib/*/*.so*
-#	rm -f debian/tmp/usr/lib/*/*.la
